# mqttMinder

./: .gitignore  Cargo.toml  __main__.py
src/: lib.rs  main.rs  mqtt_mind_map.rs  web_server.rs
templates/: dashboard.html
