[package]
name = "mqtt_mind_map"
version = "0.1.0"
edition = "2021"

[dependencies]
# MQTT client for Rust
rumqttc = "0.18.0"

# Graph manipulation and visualization
petgraph = { version = "0.6.3", features = ["graphmap"] }

# Logging
log = "0.4.20"
env_logger = "0.10.0"

# File system utilities
dirs = "5.0.0"

# Time handling
chrono = "0.4"

# SVG generation
svg = "0.13"

# Color handling
palette = "0.7"

# Image processing
image = "0.24"

# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# HTML templates
askama = "0.12"
